--- a/humanoid/src/main/AndroidManifest.xml
+++ b/humanoid/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
-<manifest package="com.e16din.humanoid"
-          xmlns:android="http://schemas.android.com/apk/res/android"/>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools">
+
+  <application
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:fullBackupContent="@xml/backup_rules" />
+
+</manifest>
